# BallGame

./: CMakeLists.txt  main.cpp
levels/: 1.json
src/: Animation.h  ContextManager.h  Draftsman.h  EventManager.h  Factory.h  Game.h  Interceptor.h  JsonReader.h  LevelManager.h  theme_properties.h  window_properties.h
src/libs/Box2D/Dynamics/Joints/: b2FrictionJoint.cpp  b2MotorJoint.cpp  b2RevoluteJoint.cpp  b2WeldJoint.cpp  b2WheelJoint.cpp
src/ui/: AChecker.h  AUIO.h  Ball.h  Button.h  ColorScheme.h  Context.h  Label.h  ModernContext.h  PUIO.h  Text.h  UIO.h  Windmill.h
src/ui/interfaces/: Colorful.h  IContactResponder.h  IDimensional.h  IDrawable.h  IResponsible.h  IText.h  Identity.h
src/ui/logic/: ALogic.h  AfterGameLogic.h  Camera.h  GameLogic.h  IObserver.h  MenuLogic.h  Subject.h  WorldLogic.h
src/ui/physics/: Ball.h  ContactListener.h  ExitDoor.h  Influential.h  InfluentialPUIO.h  PO.h  PUIO.h  Player.h  Windmill.h  WorldContext.h  WorldUIO.h  WorldWrapper.h  box2d_properties.h
src/utility/: P_P_M.h  math_things.h  other_things.h  primitive_types.h
